# nba-ingest

./: .env.example  .gitignore  FRICTION.md  HANDOFF.md  LICENSES.md  README.md  pyproject.toml
.github/workflows/: backfill.yml  daily_settle.yml  v2_backfill.yml  v2_daily.yml  weekly_meta.yml
dev/: _approve.py  _audit.py  _audit_flat_population.sql  _backfill.py  _backfill_br_player_box.sql  _backfill_br_team_ids.sql  _dedup_player_box.sql  _final_sanity.sql  _health_check.sql  _load_season.py  _parity_check_team_box.sql  _phase0_era_fetch.py  _phase0_probe.py  _phase1_slice.py  _phase2_slice.py  _recover_br_rows.sql  _remediate_caveats.py  _remediate_linescore.py  _remediate_provenance.py  _settle.py  _swap_to_br_canonical.sql  _validate_team_lookup.sql  apply_sql.py
docs/: ARCHITECTURE.md  BR_DATA_CATALOG.md  REBUILD_METHOD.md  REBUILD_PLAN.md  SETUP.md  SHAPES.md  plan.md
sql/: 001_bootstrap.sql  010_stage.sql  020_raw_tables.sql  040_flat_tables.sql  060_xref_setup.sql  100_comment_refresh.sql
sql/050_seed_from_jb/: 001_player_box.sql  002_games.sql  003_line_scores.sql  004_officials.sql  005_players.sql  006_teams.sql  007_draft.sql  008_inactive.sql  009_draft_combine.sql  010_team_history.sql  011_play_by_play.sql
sql/070_derived_views/: 001_vw_team_box.sql
sql/090_validation/: 001_row_counts.sql  002_date_ranges.sql  003_spot_checks.sql  004_linkage_checks.sql
sql/v2/: 010_ddl.sql  020_metric_coverage_seed.sql  030_phase2_ddl.sql  040_derived_views.sql  050_caveats.sql  051_caveat_provenance.sql  054_line_score_ot56.sql  (+9 more)
tests/: test_flatteners.py
(+15 files in other folders)
