[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nba-ingest"
version = "0.1.0"
description = "Pipeline that pumps NBA data from Basketball-Reference into Snowflake"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "snowflake-connector-python>=3.5",
    "cryptography>=42.0",
    "beautifulsoup4>=4.12",
    "html5lib>=1.1",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/nba_ingest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
